[b]Version 0.5.63 (not released yet)[/b]:

(2007-11-27)
 * If mplayer is compiled with gui support, it seems pause may not work 
   properly. I think this is fixed now, by changing the PAUSE command in
   input.conf. Should fix bug #1839110.

(2007-11-25)
 * A very important changed has been added in this revision. SMPlayer is
   the first mplayer frontend in the world (I guess) which uses the new 
   slave commands sub_vob, sub_demux and sub_file (added a few hours ago in the
   mplayer svn). These commands, at last, allow to accurately select the 
   subtitle track. Now you can mix without problems subtitles from different 
   sources: embedded subtitles (like in mkv or mp4 or dvds) and external 
   subtitles (srt, sub, idx/sub...), and now subtitle selection in mp4 files
   should work again (fixes bug #1806153).
   This possibility requires mplayer svn r25158 or above.
   The following option for the config file has been added: 
   use_new_sub_commands. The possible values are: 0 (false), 1 (true), 
   -1 (autodetect). The default value is -1. Autodetection will use the new
   commands or the old command according to the mplayer version.

(2007-11-24)
 * Added Polish texts for the comboboxes in Preferences->Advanced->MPlayer
   language, sent by jarek. 

(2007-11-21)
 * Added support for playlists in format pls. Now smplayer can open and
   save pls files (only local files). 
   Not much sure if QSettings produce a file readable by other applications 
   (tested with xmms and it seems it works ok).

(2007-11-20)
 * (Internal change) Added a new list in extensions: multimedia, which
   includes both video and audio extensions.
 * Now "Add directory" in playlist only adds video and audio files (not
   subtitles files, images or any other stuff you may have there).

(2007-11-19)
 * Added patch by redxii, which provide a new icon for file associations
   under Windows.

   
[b]Version 0.5.62[/b]:

(2007-11-16)