@@ -209,8 +209,10 @@ void Preferences::reset() {
 
 	save_window_size_on_exit = true;
 
-	enable_vcd_on_windows = false;
+#ifdef Q_OS_WIN
+	//enable_vcd_on_windows = false;
 	enable_audiocd_on_windows = false;
+#endif
 
 	close_on_finish = false;
 
@@ -390,8 +392,10 @@ void Preferences::save() {
 	set->setValue("restore_pos_after_fullscreen", restore_pos_after_fullscreen);
 	set->setValue("save_window_size_on_exit", save_window_size_on_exit);
 
-	set->setValue("enable_vcd_on_windows", enable_vcd_on_windows);
+#ifdef Q_OS_WIN
+	//set->setValue("enable_vcd_on_windows", enable_vcd_on_windows);
 	set->setValue("enable_audiocd_on_windows", enable_audiocd_on_windows);
+#endif
 
 	set->setValue("close_on_finish", close_on_finish);
 
@@ -586,8 +590,10 @@ void Preferences::load() {
 	restore_pos_after_fullscreen = set->value("restore_pos_after_fullscreen", restore_pos_after_fullscreen).toBool();
 	save_window_size_on_exit = 	set->value("save_window_size_on_exit", save_window_size_on_exit).toBool();
 
-	enable_vcd_on_windows = set->value("enable_vcd_on_windows", enable_vcd_on_windows).toBool();
+#ifdef Q_OS_WIN
+	//enable_vcd_on_windows = set->value("enable_vcd_on_windows", enable_vcd_on_windows).toBool();
 	enable_audiocd_on_windows = set->value("enable_audiocd_on_windows", enable_audiocd_on_windows).toBool();
+#endif
 
 	close_on_finish = set->value("close_on_finish", close_on_finish).toBool();
 
